--- a/NottyApp/templates/min_flash.html
+++ b/NottyApp/templates/min_flash.html
@@ -5,20 +5,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
     <title>Notty</title>
-    <div>
-        <a href='/' style="font-size:40px">X</a>
-        <h1 style="display:inline">Notty</h1>
-        <a href='/setting/' style="font-size:40px">=</a>
-    </div>
-    <meta http-equiv="refresh" content= "0.6 ; url=/real_min">
-    <link rel="stylesheet" href="static/css/flash.css">
+    
+    
+    
+    <img src="{% static 'app/metro.png' %}" alt="metro" width="100%" class="metro_img"/>
+
+
+
+    <meta http-equiv="refresh" content= "1.2 ; url=/real_min">
+    <!--<link rel="stylesheet" href="{% static 'css/flash.css' %}">-->
 
 </head>
 <body>
 
     <div class="square">
         <div class="spin"></div>
-      </div>
+    </div>
+      <style>
+        html {
+          background-color: #F9F9F9;
+        }
+
+
+        body::-webkit-scrollbar {
+          display:none /* Chrome , Safari , Opera */
+          overflow: hidden;
+
+        }
+
+        .metro_img {
+          position: absolute;
+          width: 100%;
+          z-index: -1;
+          left: 0;
+          top: -60%;
+          -webkit-animation-name: slideUp;
+          -webkit-animation-start: 0.8s;
+          -webkit-animation-duration: 0.8s;
+          -webkit-animation-timing-function: linear;
+        }
+
+                  
+        @-webkit-keyframes slideUp {
+          
+          0%   { top: 0%; }
+          25%   { top: -40%;}
+          60%   { top: -50%;}
+          100%   {  top: -60%; }
+        } 
+
+
+        .notty_logo {
+          font-size: 40rem;
+          font-weight: bold;
+          color: #fff;
+
+          font-family: 'MICEGothic Bold';
+          text-shadow: 2px 4px 2px gray;
+
+          padding: 0;
+
+          display: flex;
+          justify-content: left;
+          margin-left: 30rem;
+          margin-top: 20rem;
+
+          position: relative;
+        }
+
+      </style>
 </body>
 </html>
