--- a/NottyApp/templates/setting.html
+++ b/NottyApp/templates/setting.html
@@ -1,1 +1,274 @@
-<h1>SETTING PAGE</h1>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notty</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+
+    <script>
+
+        let choosehome = document.querySelector("choose_home");
+
+
+        function drop(){
+
+        }
+    </script>
+
+
+</head>
+
+
+<body style="background-color: #F9F9F9;">
+
+
+    <img src="{% static 'app/metro.png' %}" alt="metro" width="100%" class="metro_img"/>
+
+
+    <div class="page2_icons">
+        <div class="circle">
+            <a href='/' class="none"><i class="fa-solid fa-x"></i></a>
+        </div>
+    </div>
+    
+    <div class="notty_logo">
+        <p class="notty_text">
+            설정
+        </p>  
+    </div>
+
+
+
+    <box class="container">
+
+        <a href="/favorite/" class="favorite">
+            <div class="emoji">
+                ♡
+            </div>
+            <div>
+                <p>즐겨찾기</p>
+            </div>
+        </a>
+    
+        <div class="invite">
+            <div class="emoji">
+                🌀
+            </div>
+            <div>
+                <p>친구에게 추천하기</p>
+            </div>
+        </div>
+    
+    
+        <div class="choose_home" onclick='drop()'>
+            <div class="emoji">
+                🏠
+            </div>
+            <div>
+                <p>홈화면 선택</p>
+            </div>
+        </div>
+    
+        <div class="alert">
+            <div class="emoji">
+                🛎
+            </div>
+            <div>
+                <p>알림 설정</p>
+            </div>
+        </div>
+    
+        <a href="mailto:steamedbunwith@gmail.com?subject=노티 피드백 메일&body=%0D%0A%0D%0A%0D%0A[노티에서 전송된 메일입니다.]" class="feedback">
+            <div class="emoji">
+                📩
+            </div>
+            <div>
+                <p>의견 보내기</p>
+            </div>
+        </ㅁ>
+    
+        <a  href="/" class="logout">
+            <div class="emoji">
+                🚪
+            </div>
+            <div>
+                <p>로그아웃</p>
+            </div>
+        </a>
+    </box>
+
+
+</body>
+
+<style>
+    /* h1 {
+        font-size: 40px;
+        text-align: center;
+        margin: 0;
+        padding: 20px;
+        margin-bottom:200px;
+        font-family: 'MICEGothic Bold';
+
+    } */
+
+    @font-face {
+            font-family: 'MICEGothic Bold';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
+            font-weight: 700;
+            font-style: normal;
+            }
+        @font-face {
+            font-family: 'MICEGothic';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic.woff2') format('woff2');
+            font-weight: 400;
+            font-style: normal;
+        }
+        
+    html {font-size: 1px;}
+    body {font-size: 1rem;}
+
+    a {
+        text-decoration: none;
+        color: #000;
+        }
+
+    a:visited { text-decoration: none; }
+    a:hover { text-decoration: none; }
+    a:focus { text-decoration: none; }
+    a:hover, a:active { text-decoration: none; }
+
+
+    body {
+        font-family: 'MICEGothic';
+        width: 100vw;
+        height: 100vh;
+        background-color:#F9F9F9;
+        padding: 0;
+        margin: 0;
+    }
+
+
+
+    .metro_img {
+        position: absolute;
+        width: 100%;
+        z-index: -1;
+        left: 0;
+    }
+
+
+    .notty_logo {
+        font-size: 40rem;
+        font-weight: bold;
+        color: #fff;
+        font-family: 'MICEGothic Bold';
+        text-shadow: 2px 4px 2px gray;
+        padding: 0;
+        display: flex;
+        justify-content: left;
+        margin-left: 30rem;
+        margin-top: 55rem;
+        position: relative;
+    }
+
+    .page2_icons {
+        margin-left: 15rem;
+        margin-right: 15rem;
+        
+        padding: 20rem;
+        font-size: 32rem;
+        display: flex;
+        justify-content: space-between;
+        /* color: inherit; */
+    }
+
+    .circle{
+    width: 50rem;
+    height: 50rem;
+    border-radius: 50%;
+    background-color: #fff;
+    margin-top: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow:0 2px 20px -5px black;
+    }
+
+
+    .none {
+        font-size: 20rem;
+        color: #000;
+        margin: 20px;
+    }
+
+
+
+    .container {
+        margin: auto;
+        /* height: fit-content; */
+        /* margin-bottom: 65rem; */
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        position: absolute;
+    }
+
+
+
+    .favorite, .invite, .choose_home, .alert, .feedback, .logout {
+        margin-left: 15rem;
+        margin-right: 15rem;
+        margin-top: 20rem;
+        padding: 15rem;
+        height: 50px;
+        font-size: 14rem;
+        display: flex;
+        justify-content: start;
+        background-color: #ebebeb;
+        border-radius: 10rem;
+        box-shadow:0 2px 20px -5px black;
+        transition: all 0.5s;
+    }
+
+
+    .favorite:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+    }
+    .invite:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+    }
+    .choose_home:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+        height: 120px;
+    }
+    .alert:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+        height: 200px;
+    }
+    .feedback:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+    }
+    .logout:hover {
+        background-color: #EB6200;
+        outline: 3px solid #E3431B;
+    }
+
+    .emoji {
+        font-size: 15rem;
+        margin-right: 10rem;
+    }
+
+
+</style>
