--- a/NottyApp/templates/setting.html
+++ b/NottyApp/templates/setting.html
@@ -265,6 +265,36 @@
         outline: 3px solid #E3431B;
     }
 
+    .favorite:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+    }
+    .invite:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+    }
+    .choose_home:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+        height: 120px;
+    }
+    .alert:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+        height: 200px;
+    }
+    .feedback:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+    }
+    .logout:active {
+        background-color: #E3431B;
+        outline: 3px solid #E3431B;
+    }
+    
+
+
+
     .emoji {
         font-size: 15rem;
         margin-right: 10rem;
