setting.html active

--- a/NottyApp/templates/setting.html
+++ b/NottyApp/templates/setting.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     
-        <div class="alert">
+        <div class="alert" onclick='drop()'>
             <div class="emoji">
                 🛎
             </div>
