setting.html active

--- a/NottyApp/templates/setting.html
+++ b/NottyApp/templates/setting.html
@@ -47,7 +47,7 @@
 
     <box class="container">
 
-        <a href="/favorite/" class="favorite">
+        <a href="/favorite/" class="favorite" onclick='drop()'>
             <div class="emoji">
                 ♡
             </div>
@@ -56,7 +56,7 @@
             </div>
         </a>
     
-        <div class="invite">
+        <div class="invite" onclick='drop()'>
             <div class="emoji">
                 🌀
             </div>
@@ -84,7 +84,7 @@
             </div>
         </div>
     
-        <a href="mailto:steamedbunwith@gmail.com?subject=노티 피드백 메일&body=%0D%0A%0D%0A%0D%0A[노티에서 전송된 메일입니다.]" class="feedback">
+        <a href="mailto:steamedbunwith@gmail.com?subject=노티 피드백 메일&body=%0D%0A%0D%0A%0D%0A[노티에서 전송된 메일입니다.]" class="feedback" onclick='drop()'>
             <div class="emoji">
                 📩
             </div>
@@ -93,7 +93,7 @@
             </div>
         </ㅁ>
     
-        <a  href="/" class="logout">
+        <a  href="/" class="logout" onclick='drop()'>
             <div class="emoji">
                 🚪
             </div>
