outline radius setting.html

--- a/NottyApp/templates/setting.html
+++ b/NottyApp/templates/setting.html
@@ -240,57 +240,32 @@
 
     .favorite:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
+
     }
     .invite:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
     }
     .choose_home:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
         height: 120px;
     }
     .alert:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
         height: 200px;
     }
     .feedback:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
     }
     .logout:hover {
         background-color: #EB6200;
-        outline: 3px solid #E3431B;
+        box-shadow: 0 0 1pt 2pt #E3431B;
     }
 
-    .favorite:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-    }
-    .invite:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-    }
-    .choose_home:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-        height: 120px;
-    }
-    .alert:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-        height: 200px;
-    }
-    .feedback:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-    }
-    .logout:active {
-        background-color: #E3431B;
-        outline: 3px solid #E3431B;
-    }
     
 
 
