--- a/NottyApp/templates/favorite.html
+++ b/NottyApp/templates/favorite.html
@@ -1,1 +1,345 @@
-<h1>즐겨찾기</h1>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+        <title>Notty</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
+    </head>
+    <body>
+
+        <img
+            src="{% static 'app/metro.png' %}"
+            alt="metro"
+            width="100%"
+            class="metro_img"/>
+
+        <div class="page2_icons">
+            <div class="circle">
+                <a href='/' class="favorite">
+                    X
+                </a>
+            </div>
+            <div class="circle">
+                <a href='/setting/' class="setting">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
+            </div>
+        </div>
+        <div class="notty_logo">
+            <p class="notty_text">
+                Notty
+            </p>
+        </div>
+        <h1 class="servicepre">서비스 준비중입니다.</h1>
+
+    <style>
+        @font-face {
+            font-family: 'MICEGothic Bold';
+            src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2") format('woff2');
+            font-weight: 700;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'MICEGothic';
+            src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic.woff2") format('woff2');
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        html {
+            font-size: 1px;
+        }
+        body {
+            font-size: 1rem;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #F9F9F9;
+            font-family: 'MICEGothic';
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+        a:visited {
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: none;
+        }
+        a:focus {
+            text-decoration: none;
+        }
+        a:active,
+        a:hover {
+            text-decoration: none;
+        }
+
+        .metro_img {
+            position: absolute;
+            width: 100%;
+            z-index: -1;
+            left: 0;
+
+        }
+
+        .page2_icons {
+            margin-left: 15rem;
+            margin-right: 15rem;
+
+            padding: 20rem;
+            font-size: 32rem;
+            display: flex;
+            justify-content: space-between;
+            position: relative;
+            /* color: inherit; */
+        }
+
+        .circle {
+            width: 50rem;
+            height: 50rem;
+            border-radius: 50%;
+            background-color: #fff;
+            margin-top: 15rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 20px -5px black;
+        }
+        .setting {
+            font-size: 20rem;
+            color: #000;
+            position: relative;
+            margin: 20px;
+        }
+        .none {
+            font-size: 20rem;
+            color: #000;
+            position: relative;
+            margin: 20px;
+        }
+
+        .notty_logo {
+            font-size: 40rem;
+            font-weight: bold;
+            color: #fff;
+            font-family: 'MICEGothic Bold';
+            text-shadow: 2px 4px 2px gray;
+            padding: 0;
+            display: flex;
+            justify-content: left;
+            margin-left: 30rem;
+            margin-top: 20rem;
+            position: relative;
+        }
+
+        .margin {
+            position: absolute;
+            height: fit-content;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            top: 0;
+            bottom: 0;
+            margin-top: 53%;
+            margin-bottom: auto;
+            padding-top: 20rem;
+        }
+
+        .form {
+            margin: auto;
+            /* height: fit-content; */
+            /* margin-bottom: 65rem; */
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            position: absolute;
+        }
+
+        .select1 {
+            border-radius: 6px;
+            width: 90vw;
+            height: 64rem;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 20rem;
+            margin-top 90rem;
+        }
+
+        label {
+            color: #fff;
+            margin-top: 10rem;
+        }
+        .select2 {
+            border-radius: 13px;
+            height: 40rem;
+
+            font-size: 15rem;
+            background-color: #ebebeb;
+            width: 42vw;
+            line-height: 40rem;
+            padding: auto;
+            margin: auto;
+
+            box-shadow: 0 2px 10px -5px black;
+
+        }
+
+        .label_min,
+        .label_sht {
+            font-size: 15rem;
+            color: #000;
+            margin: auto;
+            padding: auto;
+        }
+
+        /* .station {
+        background-color: #ebebeb;
+        font-size: 20rem;
+        line-height: 80rem;
+        height: 80rem;
+        margin-bottom: 20px;
+        color: #fff;
+        width: 90vw;
+        padding: 0px 10px;
+      } */
+
+        /* #id_start, #id_fin {
+
+        height: 30px;
+        width: 60vw;
+        background-color: #BBBBBB;
+        border-width: 0px 0px 3px 0px ;
+        font-size: 20px;
+      } */
+
+        .inputText1,
+        .inputText2 {
+            border-radius: 20px;
+            margin-bottom: 25rem;
+
+            background-color: #ebebeb;
+            border: none;
+            width: 88vw;
+            height: 60rem;
+            color: #000;
+            font-size: 25rem;
+            text-align: center;
+
+            position: relative;
+
+            box-shadow: 0 2px 10px -5px black;
+
+        }
+
+        .search {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 6px 14px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+            border-radius: 6px;
+            border: none;
+
+            background: #5D27B6;
+            box-shadow: 0 0.5px 1px rgba(0, 0, 0, 0.1), inset 0 0.5px 0.5px rgba(255, 255, 255, 0.5), 0 0 0 0.5px rgba(0, 0, 0, 0.12);
+            background: linear-gradient(to right, #F53803, #F5D020);
+
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            color: #fff;
+            font-size: 30rem;
+            line-height: 53rem;
+            height: 65rem;
+            margin: 0 auto;
+            padding: auto;
+            width: 90vw;
+
+            box-shadow: 0 0 10px 1px gray;
+        }
+        .search:focus {
+            box-shadow: inset 0 0.8px 0 -0.25px rgba(255, 255, 255, 0.2), 0 0.5px 1px rgba(0, 0, 0, 0.1), 0 0 0 3.5px rgba(58, 108, 217, 0.5);
+            outline: 0;
+        }
+        .search-2 {
+            background-color: #845EC2;
+            font-size: 30rem;
+            line-height: 60rem;
+            height: 65rem;
+            margin-bottom: 25px;
+            color: #F3F3F3;
+            width: 90vw;
+        }
+
+        .chan {
+            color: #fff;
+            width: 12vw;
+            height: 12vw;
+            margin-left: 10rem;
+            padding: 0;
+            display: flex;
+            background-color: #EB6200;
+            outline: none;
+            border: none;
+            border-radius: 20px;
+            font-size: 30rem;
+            font-family: 'MICEGothic';
+            position: relative;
+            align-items: center;
+            justify-content: center;
+            top: -280rem;
+            left: 5rem;
+            z-index: 1;
+            box-shadow: 0 2px 10px -5px black;
+        }
+
+        @media (min-width: 768px) {
+            .chan {
+                width: 100px;
+                height: 100px;
+                top: -300rem;
+                left: 10rem;
+            }
+        }
+
+        .servicepre {
+            z-index: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 30rem;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.5);
+
+        }
+    </style>
+
+</body>
+</html>
